# Chrona

./: .gitignore  CMakeLists.txt  README.md
data/: example_events.jsonl
include/chrona/: causal.hpp  engine.hpp  model.hpp  ordering.hpp  persistence.hpp  window.hpp
src/: causal.cpp  engine.cpp  main.cpp  model.cpp  ordering.cpp  persistence.cpp  window.cpp
